# spotdate

./: .gitignore  Dockerfile  README.md  TODO.md  frontend.py  main.py  pyproject.toml
app/: main.py
app/services/: frontend.py  spotify.py  storage.py
data/: followers.json  package-lock.json  package.json  top_artists.json  top_tracks.json  user.json
fetched_data/sanchitram/: artists_2026-02-05.json  test.py
scripts/: sync_data.py
tests/: create_test_bucket.py  test_gcs.py
